logic for the game implemented, will eventually need refactoring

--- a/index.html
+++ b/index.html
@@ -27,9 +27,11 @@
         <div id="gameContent">
             <h1>Le Cailloux, Pétal ou Pique à glace</h1>
             <div id="buttons">
-                <button class="symbol_button" id="cailloux">Cailloux</button>
-                <button class="symbol_button" id="petal">Pétal</button>
-                <button class="symbol_button" id="pique">Pique à glace</button>
+                <ul>
+                    <li><button class="symbol_button" id="cailloux">Cailloux</button></li>
+                    <li><button class="symbol_button" id="petal">Pétal</button></li>
+                    <button class="symbol_button" id="pique">Pique à glace</button>
+                </ul>
             </div>
         </div>
 
