added different screens display in script.js

--- a/index.html
+++ b/index.html
@@ -10,7 +10,6 @@
 
 <body>
     <main>
-
         <div id="overlay"></div>
 
         <div id="modal">
@@ -26,16 +25,19 @@
 
         <div id="gameContent">
             <h1>Le Cailloux, Pétal ou Pique à glace</h1>
-                <ul id="buttons_list">
-                    <li><button class="symbol_button" id="cailloux">🪨</button></li>
-                    <li><button class="symbol_button" id="petal">🥀</button></li>
-                    <li><button class="symbol_button" id="pique">🪛</button></li>
-                </ul>
-                <div id="outputDisplay_game"></div>
-                <div id="playerScoreDisplay"></div>
-                <div id="robotScoreDisplay"></div>
+            <ul id="buttons_list">
+                <li><button class="symbol_button" id="cailloux">🪨</button></li>
+                <li><button class="symbol_button" id="petal">🥀</button></li>
+                <li><button class="symbol_button" id="pique">🪛</button></li>
+            </ul>
+            <ul id="displays_list">
+                <li><div id="outputDisplay_game"></div></li>
+                <li><div id="playerScoreDisplay"></div></li>
+                <li><div id="robotScoreDisplay"></div></li>
+                <li><div id="sparScoreDisplay"></div></li>
+                <li><div id="roundsPlayedDisplay"></div></li>
+            </ul>
         </div>
-
     </main>
     <footer>Tous droits réservés à Bertrand Tang copyright © 2023</footer>
 </body>
