--- a/index.html
+++ b/index.html
@@ -31,11 +31,11 @@
                 <li><button class="symbol_button" id="pique">🪛</button></li>
             </ul>
             <ul id="displays_list">
-                <li><div id="outputDisplay_game"></div></li>
-                <li><div id="playerScoreDisplay"></div></li>
-                <li><div id="robotScoreDisplay"></div></li>
-                <li><div id="sparScoreDisplay"></div></li>
-                <li><div id="roundsPlayedDisplay"></div></li>
+                <li><div id="outputDisplay_game">Résultat</div></li>
+                <li><div id="playerScoreDisplay">Votre Score</div></li>
+                <li><div id="robotScoreDisplay">Score de Robot</div></li>
+                <li><div id="sparScoreDisplay">Égalité</div></li>
+                <li><div id="roundsPlayedDisplay">Parties jouées</div></li>
             </ul>
         </div>
     </main>
