media queries expedited

--- a/index.html
+++ b/index.html
@@ -31,7 +31,7 @@
                 <li><button class="symbol_button" id="pique">🪛</button></li>
             </ul>
             <ul id="displays_list">
-                <li><div id="outputDisplay_game">Résultat</div></li>
+                <li id="results"><div id="outputDisplay_game">Résultat</div></li>
                 <li><div id="playerScoreDisplay">Votre Score</div></li>
                 <li><div id="robotScoreDisplay">Score de Robot</div></li>
                 <li><div id="sparScoreDisplay">Égalité</div></li>
