--- a/index.html
+++ b/index.html
@@ -1,7 +1,7 @@
 <html lang="fr">
 
 <head>
-    <meta charset="UTF-8" />
+    <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <link rel="stylesheet" src="public/css/reset.css">
     <link rel="stylesheet" src="public/css/index.css">
