src => href (css files)

--- a/index.html
+++ b/index.html
@@ -3,8 +3,8 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <link rel="stylesheet" src="public/css/reset.css">
-    <link rel="stylesheet" src="public/css/index.css">
+    <link rel="stylesheet" href="./public/css/reset.css">
+    <link rel="stylesheet" href="./public/css/index.css">
     <title>Cailloux, Pétal, Pique à glace</title>
 </head>
 
@@ -31,16 +31,26 @@
                 <li><button class="symbol_button" id="pique">🪛</button></li>
             </ul>
             <ul id="displays_list">
-                <li id="results"><div id="outputDisplay_game">Résultat</div></li>
-                <li><div id="playerScoreDisplay">Votre Score</div></li>
-                <li><div id="robotScoreDisplay">Score de Robot</div></li>
-                <li><div id="sparScoreDisplay">Égalité</div></li>
-                <li><div id="roundsPlayedDisplay">Parties jouées</div></li>
+                <li id="results">
+                    <div id="outputDisplay_game">Résultat</div>
+                </li>
+                <li>
+                    <div id="playerScoreDisplay">Votre Score</div>
+                </li>
+                <li>
+                    <div id="robotScoreDisplay">Score de Robot</div>
+                </li>
+                <li>
+                    <div id="sparScoreDisplay">Égalité</div>
+                </li>
+                <li>
+                    <div id="roundsPlayedDisplay">Parties jouées</div>
+                </li>
             </ul>
         </div>
     </main>
     <footer>Tous droits réservés à Bertrand Tang copyright © 2023</footer>
+    <script src="public/js/script.js"></script>
 </body>
-<script src="public/js/script.js"></script>
 
 </html>
